feat: Assemble controlled airspace (#272)
* checkpoint on assembling airspaces

* testing the new stuff and consumers written

* test data

* consistency change

* integration and test

* all the other updates needed to go with that work.

* this works around no heliport support